<resources>
    <string name="app_name">Tasks List</string>
    <string name="search_hint">Enter text</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="pref_title_dark_theme">Dark theme</string>
    <string name="ion_search"></string>

    <string name="group_default_personal">Personal</string>
    <string name="group_default_work">Work</string>
    <string name="group_default_all">All</string>
    <string name="group_default_closes">Completed</string>
    <string name="hint_title">Notification</string>
    <string name="hint_date">Date</string>
    <string name="title_save">Save</string>
    <string name="error_empty_field">Empty field</string>
    <string name="hint_group">Group</string>
    <string name="action_edit_group">Group list</string>
    <string name="title_add">Add</string>
    <string name="action_feedback">Send feedback</string>
    <string name="alert_group_edit">Enter name</string>
    <string name="alert_group_save">Save</string>
    <string name="alert_group_cancel">Cancel</string>
    <string name="removed">Removed</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hint_time">Time</string>
</resources>
