<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sabd="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        sabd:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_edit_group"
        android:orderInCategory="100"
        android:title="@string/action_edit_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
