<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_edit"
                style="@style/Toolbar">

            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp">
                <EditText
                    android:id="@+id/title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:inputType="textCapSentences"></EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_til"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_til"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp">

                <EditText
                    android:id="@+id/date_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"></EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_til"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_til"
                android:layout_alignRight="@id/title_til"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp">

                <EditText
                    android:id="@+id/time_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_time"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@id/date_til">
            <EditText
                android:id="@+id/group_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_group"
                android:inputType="textCapSentences"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>